# soma-engine

./: .gitignore  Cargo.toml  README.md  build_output.txt  build_output2.txt  build_output3.txt  build_output4.txt  build_output5.txt  build_output6.txt  build_output7.txt  ship_memory.json
research/: ghost_market_log.jsonl
src/: compiler_watcher.rs  config.rs  error.rs  fpga_export.rs  learning_trainer.rs  lib.rs  market_trainer.rs  models.rs  neuromorphic_core.rs  preflight.rs  rag_ingest.rs  startup.rs  utils.rs
src/ai/: image_gen.rs  mind_researcher.rs  mod.rs  prompts.rs  reranker.rs  researcher.rs
src/backend/: jlrs_zero_copy.rs  julia.rs  mod.rs  rust_backend.rs  zmq_backend.rs
src/bridge/: fault.rs  mod.rs  monitor.rs
src/diagnostics/: fault.rs  fault_class.rs  mod.rs  monitor.rs
src/inference/: completion.rs  cuda_bridge.rs  embeddings.rs  mod.rs  model.rs  neuro_bridge.rs  persona.rs  vision.rs
src/ingest/: consensus_reward.rs  interpolator.rs  julia_bridge.rs  kaspa_grpc.rs  mod.rs  neuraxon_log_parser.rs  node_bridge.rs  triple_bridge.rs
src/market/: mod.rs  quai.rs
src/models/: miner_bridge.rs
src/snn/: ahl_router.rs  engine.rs  mining_reward.rs  mod.rs  modulators.rs  neuromod_encoder.rs  neuromorphic_core.rs
src/spine/: dydx_ingest.rs  fpga_readback.rs  market_pulse.rs  mod.rs  zmq_spine.rs
src/telemetry/: cpu_telemetry.rs  gpu_telemetry.rs  mining_sync_telemetry.rs  mining_telemetry.rs  mod.rs  nvml_telemetry.rs  sensory_encoder.rs  telemetry_exporter.rs  thermal_actuators.rs  thermal_engine.rs  thermal_sensors.rs
src/trading/: mod.rs
src/training/: legacy_trainer.rs
