[package]
name = "soma-engine"
version = "0.9.2"
edition = "2021"
description = "SNN Engine + Inference + Telemetry + AI (Tier 1 — headless)"
authors = ["Raul Mc <raulmc@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/rmems/soma-engine"

[features]
default = ["gpu", "image-gen", "ingest"]
gpu = ["candle-core", "candle-nn", "candle-transformers", "half", "myelin-accelerator"]
image-gen = []
ingest = []
quai_integration = []
quai_testing = ["quai_integration"]
julia = ["jlrs"]

[[bin]]
name = "ship-ingest-cli"
path = "src/bin/ingest_cli.rs"

[[bin]]
name = "market_pilot"
path = "src/bin/market_pilot.rs"

[[bin]]
name = "live_supervisor"
path = "src/bin/live_supervisor.rs"

[lib]
name = "soma_engine"
path = "src/lib.rs"

[dependencies]
# UI and Core Application
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
anyhow = { version = "1", features = ["backtrace"] }
tracing = "0.1"
nvml-wrapper = "0.10"
cust = "0.3.2"
jlrs = { version = "0.22.1", optional = true }
gnuplot = "0.0.43"
synapse-link = "0.9.2"
myelin-accelerator = "0.9.2"
thiserror = "2"
# gRPC and IPC dependencies for V2 telemetry
tonic = { version = "0.8", features = ["tls"] }
prost = "0.11"
crossbeam-channel = "0.5"
flatbuffers = "25.2.10"
zmq = "0.10"
# Explicitly enable TLS for wss:// dYdX websocket connections.
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-native-roots", "rustls-tls-webpki-roots", "native-tls"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.2.4", features = ["derive", "env"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
regex = "1"
fancy-regex = "0.17.0"
lazy_static = "1.4"
serialport = "4.3"
i2cdev = "0.5"
ads1x1x = "0.3"
embedded-hal = "1.0.0"
rayon = "1.7.0"
walkdir = "2.4"
base64 = "0.21"
sha2 = "0.10"
futures = "0.3.31"
nix = { version = "0.29", features = ["signal", "process"] }
pdf-extract = "0.7"
zip = "0.6"
dirs-next = "2.0"
rand = "0.8"

# AI & Inference
rig-core = "0.31.0"
hf-hub = "0.4.1"
tokenizers = "0.22.0"
image = "0.24"

# Candle
candle-core = "0.9.2"
candle-nn = "0.9.2"
candle-transformers = "0.9.2"
half = "2"
memmap2 = { version = "0.9.3", features = ["stable_deref_trait"] }

# Local patches for unpublished crates
[patch.crates-io]
myelin-accelerator = { path = "/home/raulmc/myelin-accelerator/myelin-accelerator" }
synapse-link = { path = "/home/raulmc/synapse-link" }
