[package]
name = "soma-engine"
version = "0.9.2"
edition = "2021"
description = "SNN Engine + Inference + Telemetry + AI (Tier 1 — headless)"
authors = ["Raul Mc <raulmc@example.com>"]
license = "GPL-3.0"
repository = "https://github.com/rmems/soma-engine"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
# Placeholder until integrated
flatbuffers = "25.2.10"

# Optional local crates (commented until present)
# neuromod = { path = "./crates/neuromod" }
# spikenaut-spine = { path = "./crates/spikenaut-spine" }

[[bin]]
name = "soma-daemon"
path = "src/bin/soma_daemon.rs"

